# cybersecurity

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/polls/migrations/: 0001_initial.py
project1/: db.sqlite3
project1/app/: models.py  urls.py  views.py
project1/app/migrations/: 0001_initial.py  0002_remove_note_content_note_url.py  0003_remove_note_created_at.py
project1/app/templates/app/: home.html  login.html  register.html  take_notes.html  url.html  view_notes.html
project1/project1/: settings.py  urls.py
testaus/mysite/: settings.py
testaus/polls/: views.py
