[tool.poetry]
name = "cybersecurity"
version = "0.1.0"
description = ""
authors = ["Ada <114645764+adarautiainen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
